[gd_scene load_steps=5 format=3 uid="uid://d3fmp8n30mj0u"]

[ext_resource type="Script" path="res://main_menu_scene.gd" id="1_uv8w3"]
[ext_resource type="FontFile" uid="uid://xcke3ars76xs" path="res://CardGameResources/Assets/Fonts/CooperBits.ttf" id="2_37pcl"]
[ext_resource type="Texture2D" uid="uid://3kfmgv3ibn3m" path="res://CardGameResources/Assets/Images/ButtonSpriteTemp.png" id="3_2s7so"]
[ext_resource type="Texture2D" uid="uid://l3ibsxj1m3yn" path="res://CardGameResources/Assets/Images/CardTableBackground2.png" id="4_y2uu5"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uv8w3")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = -956.0
offset_top = -539.0
offset_right = 964.0
offset_bottom = 541.0
theme_override_fonts/normal_font = ExtResource("2_37pcl")
theme_override_font_sizes/normal_font_size = 50
bbcode_enabled = true
text = "
[center] Card Game! [/center]"

[node name="BlackjackButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -320.0
offset_bottom = -224.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
texture_normal = ExtResource("3_2s7so")

[node name="RichTextLabel" type="RichTextLabel" parent="BlackjackButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -121.5
offset_top = -22.5
offset_right = 134.5
offset_bottom = 73.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("2_37pcl")
theme_override_font_sizes/normal_font_size = 36
bbcode_enabled = true
text = "[center]Blackjack"

[node name="CardbattleButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -92.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
texture_normal = ExtResource("3_2s7so")

[node name="RichTextLabel" type="RichTextLabel" parent="CardbattleButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -121.5
offset_top = -22.5
offset_right = 134.5
offset_bottom = 73.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("2_37pcl")
theme_override_font_sizes/normal_font_size = 36
bbcode_enabled = true
text = "[center]Card Battle"

[node name="PlayButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -92.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
texture_normal = ExtResource("3_2s7so")

[node name="RichTextLabel" type="RichTextLabel" parent="PlayButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -121.5
offset_top = -22.5
offset_right = 134.5
offset_bottom = 73.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("2_37pcl")
theme_override_font_sizes/normal_font_size = 36
bbcode_enabled = true
text = "[center]Play"

[node name="BackButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = 151.0
offset_bottom = 247.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
texture_normal = ExtResource("3_2s7so")

[node name="RichTextLabel" type="RichTextLabel" parent="BackButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -22.5
offset_right = 128.0
offset_bottom = 73.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("2_37pcl")
theme_override_font_sizes/normal_font_size = 48
bbcode_enabled = true
text = "[center]Back"
fit_content = true

[node name="backdrop" type="Sprite2D" parent="."]
z_index = -1000
texture = ExtResource("4_y2uu5")

[connection signal="pressed" from="BlackjackButton" to="." method="_on_blackjack_button_pressed"]
[connection signal="pressed" from="BlackjackButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="CardbattleButton" to="." method="_on_cardbattle_button_pressed"]
[connection signal="pressed" from="CardbattleButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_play_button_pressed"]
